--- a/src/application/MailboxSimButtons.fxml
+++ b/src/application/MailboxSimButtons.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -8,15 +9,21 @@
 
 <AnchorPane prefHeight="499.0" prefWidth="399.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
    <children>
-      <CheckBox layoutX="60.0" layoutY="70.0" mnemonicParsing="false" text="Er det post?" />
+      <CheckBox fx:id="postSensor" layoutX="60.0" layoutY="70.0" mnemonicParsing="false" onAction="#isPost" text="Er det post?" />
       <Label alignment="CENTER" layoutX="139.0" layoutY="39.0" text="Mailbox Simulator" />
       <Button fx:id="insideButton" layoutX="62.0" layoutY="128.0" mnemonicParsing="false" onAction="#insideBtnPushed" text="Knapp" />
       <Label layoutX="145.0" layoutY="133.0" text="Trykk her for å legge til nytt kort" />
-      <ComboBox fx:id="regRfid" layoutX="64.0" layoutY="257.0" onAction="#scanRegRfid" prefWidth="150.0" promptText="RFID" />
-      <Button fx:id="newRfid" layoutX="62.0" layoutY="194.0" mnemonicParsing="false" onAction="#scanNewRfid" text="RFID" />
-      <Label layoutX="139.0" layoutY="199.0" text="Scanner ny Rfid" />
-      <Label layoutX="231.0" layoutY="262.0" text="Scanne registrert Rfid" />
-      <Button fx:id="wrongRfid" layoutX="61.0" layoutY="323.0" mnemonicParsing="false" onAction="#scanWrong" text="Feil RFID" />
-      <Label layoutX="160.0" layoutY="328.0" text="Scanne &quot;feil&quot; Rfid" />
+      <Button fx:id="scanBtn" layoutX="62.0" layoutY="297.0" mnemonicParsing="false" onAction="#scanRfid" text="Scan" />
+      <TextField fx:id="scanner" layoutX="62.0" layoutY="372.0" onAction="#checkRfid" promptText="Skriv inn Rfid">
+         <effect>
+            <DropShadow radius="7.6675" width="11.67" />
+         </effect>
+      </TextField>
+      <TextField fx:id="newRfid" layoutX="62.0" layoutY="201.0" onAction="#scanNewRfid" promptText="Skriv inn ny Rfid">
+         <effect>
+            <DropShadow radius="8.445" width="14.78" />
+         </effect>
+      </TextField>
+      <Label layoutX="145.0" layoutY="302.0" text="Trykk her for å scanne kort" />
    </children>
 </AnchorPane>
