--- a/src/application/MailboxSimButtons.fxml
+++ b/src/application/MailboxSimButtons.fxml
@@ -6,24 +6,30 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="499.0" prefWidth="399.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <CheckBox fx:id="postSensor" layoutX="60.0" layoutY="70.0" mnemonicParsing="false" onAction="#isPost" text="Er det post?" />
       <Label alignment="CENTER" layoutX="139.0" layoutY="39.0" text="Mailbox Simulator" />
       <Button fx:id="insideButton" layoutX="62.0" layoutY="128.0" mnemonicParsing="false" onAction="#insideBtnPushed" text="Knapp" />
       <Label layoutX="145.0" layoutY="133.0" text="Trykk her for å legge til nytt kort" />
-      <Button fx:id="scanBtn" layoutX="62.0" layoutY="297.0" mnemonicParsing="false" onAction="#scanRfid" text="Scan" />
-      <TextField fx:id="scanner" layoutX="62.0" layoutY="372.0" onAction="#checkRfid" promptText="Skriv inn Rfid">
+      <Button fx:id="scanBtn" layoutX="62.0" layoutY="285.0" mnemonicParsing="false" onAction="#scanRfid" text="Scan" />
+      <TextField fx:id="scanner" layoutX="62.0" layoutY="349.0" onAction="#checkRfid" promptText="Skriv inn Rfid">
          <effect>
             <DropShadow radius="7.6675" width="11.67" />
          </effect>
       </TextField>
-      <TextField fx:id="newRfid" layoutX="62.0" layoutY="201.0" onAction="#scanNewRfid" promptText="Skriv inn ny Rfid">
+      <TextField fx:id="newRfid" layoutX="62.0" layoutY="191.0" onAction="#scanNewRfid" promptText="Skriv inn ny Rfid">
          <effect>
             <DropShadow radius="8.445" width="14.78" />
          </effect>
       </TextField>
-      <Label layoutX="145.0" layoutY="302.0" text="Trykk her for å scanne kort" />
+      <Label layoutX="145.0" layoutY="294.0" text="Trykk her for å scanne kort" />
+      <TextArea fx:id="lcdPanel" layoutX="56.0" layoutY="476.0" prefHeight="110.0" prefWidth="282.0" promptText="Tekst kommer her">
+         <effect>
+            <DropShadow radius="7.6675" width="11.67" />
+         </effect>
+      </TextArea>
+      <Label layoutX="65.0" layoutY="437.0" text="Lcd-skjerm" />
+      <Button fx:id="lcdPanelBtn" layoutX="207.0" layoutY="432.0" mnemonicParsing="false" onAction="#lcdPanelUpdate" text="Oppdater skjerm" />
    </children>
 </AnchorPane>
